[project]
name = "django-hatchway"
authors = [
    {name = "Andrew Godwin", email = "andrew@aeracode.org"},
]
description = "An unsurprising Django API framework"
readme = "README.rst"
requires-python = ">=3.10"
license = {text = "BSD-3-Clause"}
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "django>=4.0",
    "pydantic~=1.10",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "hatchway.__version__"}

[project.optional-dependencies]
dev = [
    "ruff >= 0.0.236",
    "isort >= 5.11.4",
    "ruff >= 0.0.236",
]
doc = [
    "mkdocs-material == 9.0.6",
    "mdx_include == 1.4.2",
    "mkdocs-markdownextradata-plugin == 0.2.5",
    "pymdown-extensions == 9.10",
]
test = [
    "pytest == 7.2.1",
    "pytest-django == 4.5.2",
    "pytest-cov == 4.0.0",
    "pytest-sugar == 0.9.6"
]

# TESTING

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--force-sugar --verbose --cov-fail-under=80 --cov-report=term-missing"
testpaths = [
    "tests",
]

DJANGO_SETTINGS_MODULE="tests.test_project.settings"
django_find_project = false

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/settings/*",
]

source = ["hatchway"]


# LINTING
[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data/
  | profiling
  | migrations
)/
'''

[tool.isort]
profile = "black"
skip = "migrations"

[tool.ruff]
line-length = 88
extend-exclude = [
    "*/migrations/*",
    "*/scripts/*",
    "*/docs/*",
]

select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    # "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "F405", # name may be undefined, or defined from star imports
]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "migrations",
    "venv",
]
per-file-ignores = {}

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.11.
target-version = "py311"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
